TBS eXporter class
plus unit tests
https://github.com/bibledit/cloud/issues/458

--- a/Makefile.am
+++ b/Makefile.am
@@ -449,7 +449,8 @@ libbibledit_a_SOURCES = \
 	microtar/microtar.c \
 	miniz/miniz.c \
 	nmt/index.cpp \
-	nmt/logic.cpp
+	nmt/logic.cpp \
+  tbsx/text.cpp
 
 bin_PROGRAMS = server unittest generate
 
