--- a/Makefile.am
+++ b/Makefile.am
@@ -160,6 +160,7 @@ libbibledit_a_SOURCES = \
 	manage/privileges.cpp \
 	system/index.cpp \
 	system/logic.cpp \
+  system/indonesianfree.cpp \
 	collaboration/index.cpp \
 	collaboration/link.cpp \
 	collaboration/settings.cpp \
