Indonesian free Cloud config
Guests will also have a Terjemahanku (My Translation), default at the Translation tab. https://github.com/bibledit/cloud/issues/503

--- a/Makefile.am
+++ b/Makefile.am
@@ -455,7 +455,8 @@ libbibledit_a_SOURCES = \
   read/index.cpp \
   read/load.cpp \
   read/verse.cpp \
-  resource/divider.cpp
+  resource/divider.cpp \
+  filter/indonesian.cpp
 
 bin_PROGRAMS = server unittest generate
 
