Start sending account confirmation links
instead of asking for confirmation emails.
https://github.com/bibledit/cloud/issues/499
https://github.com/bibledit/cloud/issues/497

--- a/Makefile.am
+++ b/Makefile.am
@@ -456,7 +456,8 @@ libbibledit_a_SOURCES = \
   read/load.cpp \
   read/verse.cpp \
   resource/divider.cpp \
-  filter/indonesian.cpp
+  filter/indonesian.cpp \
+  session/confirm.cpp
 
 bin_PROGRAMS = server unittest generate
 
