--- a/Makefile.in
+++ b/Makefile.in
@@ -341,7 +341,7 @@ am_libbibledit_a_OBJECTS = library/bibledit.$(OBJEXT) \
 	miniz/miniz.$(OBJEXT) nmt/index.$(OBJEXT) nmt/logic.$(OBJEXT) \
 	tbsx/text.$(OBJEXT) read/index.$(OBJEXT) read/load.$(OBJEXT) \
 	read/verse.$(OBJEXT) resource/divider.$(OBJEXT) \
-	filter/indonesian.$(OBJEXT)
+	filter/indonesian.$(OBJEXT) session/confirm.$(OBJEXT)
 libbibledit_a_OBJECTS = $(am_libbibledit_a_OBJECTS)
 am_generate_OBJECTS = executable/generate.$(OBJEXT) \
 	sources/styles.$(OBJEXT)
@@ -628,30 +628,31 @@ am__depfiles_remade = access/$(DEPDIR)/bible.Po \
 	sendreceive/$(DEPDIR)/logic.Po sendreceive/$(DEPDIR)/notes.Po \
 	sendreceive/$(DEPDIR)/resources.Po \
 	sendreceive/$(DEPDIR)/sendreceive.Po \
-	sendreceive/$(DEPDIR)/settings.Po session/$(DEPDIR)/logic.Po \
-	session/$(DEPDIR)/login.Po session/$(DEPDIR)/logout.Po \
-	session/$(DEPDIR)/password.Po session/$(DEPDIR)/signup.Po \
-	session/$(DEPDIR)/switch.Po setup/$(DEPDIR)/index.Po \
-	setup/$(DEPDIR)/logic.Po sources/$(DEPDIR)/etcbc4.Po \
-	sources/$(DEPDIR)/hebrewlexicon.Po sources/$(DEPDIR)/kjv.Po \
-	sources/$(DEPDIR)/morphgnt.Po sources/$(DEPDIR)/morphhb.Po \
-	sources/$(DEPDIR)/oshb.Po sources/$(DEPDIR)/styles.Po \
-	sprint/$(DEPDIR)/burndown.Po sprint/$(DEPDIR)/index.Po \
-	sqlite/$(DEPDIR)/sqlite3.Po statistics/$(DEPDIR)/statistics.Po \
-	styles/$(DEPDIR)/css.Po styles/$(DEPDIR)/indexm.Po \
-	styles/$(DEPDIR)/logic.Po styles/$(DEPDIR)/sheetm.Po \
-	styles/$(DEPDIR)/sheets.Po styles/$(DEPDIR)/view.Po \
-	sword/$(DEPDIR)/logic.Po sync/$(DEPDIR)/bibles.Po \
-	sync/$(DEPDIR)/changes.Po sync/$(DEPDIR)/files.Po \
-	sync/$(DEPDIR)/logic.Po sync/$(DEPDIR)/mail.Po \
-	sync/$(DEPDIR)/notes.Po sync/$(DEPDIR)/resources.Po \
-	sync/$(DEPDIR)/settings.Po sync/$(DEPDIR)/setup.Po \
-	sync/$(DEPDIR)/usfmresources.Po system/$(DEPDIR)/index.Po \
-	system/$(DEPDIR)/indonesianfree.Po system/$(DEPDIR)/logic.Po \
-	tasks/$(DEPDIR)/logic.Po tasks/$(DEPDIR)/run.Po \
-	tbsx/$(DEPDIR)/text.Po text/$(DEPDIR)/text.Po \
-	timer/$(DEPDIR)/index.Po tmp/$(DEPDIR)/tmp.Po \
-	trash/$(DEPDIR)/handler.Po unittests/$(DEPDIR)/archive.Po \
+	sendreceive/$(DEPDIR)/settings.Po session/$(DEPDIR)/confirm.Po \
+	session/$(DEPDIR)/logic.Po session/$(DEPDIR)/login.Po \
+	session/$(DEPDIR)/logout.Po session/$(DEPDIR)/password.Po \
+	session/$(DEPDIR)/signup.Po session/$(DEPDIR)/switch.Po \
+	setup/$(DEPDIR)/index.Po setup/$(DEPDIR)/logic.Po \
+	sources/$(DEPDIR)/etcbc4.Po sources/$(DEPDIR)/hebrewlexicon.Po \
+	sources/$(DEPDIR)/kjv.Po sources/$(DEPDIR)/morphgnt.Po \
+	sources/$(DEPDIR)/morphhb.Po sources/$(DEPDIR)/oshb.Po \
+	sources/$(DEPDIR)/styles.Po sprint/$(DEPDIR)/burndown.Po \
+	sprint/$(DEPDIR)/index.Po sqlite/$(DEPDIR)/sqlite3.Po \
+	statistics/$(DEPDIR)/statistics.Po styles/$(DEPDIR)/css.Po \
+	styles/$(DEPDIR)/indexm.Po styles/$(DEPDIR)/logic.Po \
+	styles/$(DEPDIR)/sheetm.Po styles/$(DEPDIR)/sheets.Po \
+	styles/$(DEPDIR)/view.Po sword/$(DEPDIR)/logic.Po \
+	sync/$(DEPDIR)/bibles.Po sync/$(DEPDIR)/changes.Po \
+	sync/$(DEPDIR)/files.Po sync/$(DEPDIR)/logic.Po \
+	sync/$(DEPDIR)/mail.Po sync/$(DEPDIR)/notes.Po \
+	sync/$(DEPDIR)/resources.Po sync/$(DEPDIR)/settings.Po \
+	sync/$(DEPDIR)/setup.Po sync/$(DEPDIR)/usfmresources.Po \
+	system/$(DEPDIR)/index.Po system/$(DEPDIR)/indonesianfree.Po \
+	system/$(DEPDIR)/logic.Po tasks/$(DEPDIR)/logic.Po \
+	tasks/$(DEPDIR)/run.Po tbsx/$(DEPDIR)/text.Po \
+	text/$(DEPDIR)/text.Po timer/$(DEPDIR)/index.Po \
+	tmp/$(DEPDIR)/tmp.Po trash/$(DEPDIR)/handler.Po \
+	unittests/$(DEPDIR)/archive.Po \
 	unittests/$(DEPDIR)/biblegateway.Po \
 	unittests/$(DEPDIR)/bibles.Po unittests/$(DEPDIR)/books.Po \
 	unittests/$(DEPDIR)/cache.Po unittests/$(DEPDIR)/check.Po \
@@ -1387,7 +1388,8 @@ libbibledit_a_SOURCES = \
   read/load.cpp \
   read/verse.cpp \
   resource/divider.cpp \
-  filter/indonesian.cpp
+  filter/indonesian.cpp \
+  session/confirm.cpp
 
 server_SOURCES = executable/bibledit.cpp
 server_LDADD = libbibledit.a
@@ -3011,6 +3013,8 @@ resource/divider.$(OBJEXT): resource/$(am__dirstamp) \
 	resource/$(DEPDIR)/$(am__dirstamp)
 filter/indonesian.$(OBJEXT): filter/$(am__dirstamp) \
 	filter/$(DEPDIR)/$(am__dirstamp)
+session/confirm.$(OBJEXT): session/$(am__dirstamp) \
+	session/$(DEPDIR)/$(am__dirstamp)
 
 libbibledit.a: $(libbibledit_a_OBJECTS) $(libbibledit_a_DEPENDENCIES) $(EXTRA_libbibledit_a_DEPENDENCIES) 
 	$(AM_V_at)-rm -f libbibledit.a
@@ -3703,6 +3707,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@sendreceive/$(DEPDIR)/resources.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@sendreceive/$(DEPDIR)/sendreceive.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@sendreceive/$(DEPDIR)/settings.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@session/$(DEPDIR)/confirm.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@session/$(DEPDIR)/logic.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@session/$(DEPDIR)/login.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@session/$(DEPDIR)/logout.Po@am__quote@ # am--include-marker
@@ -4783,6 +4788,7 @@ distclean: distclean-am
 	-rm -f sendreceive/$(DEPDIR)/resources.Po
 	-rm -f sendreceive/$(DEPDIR)/sendreceive.Po
 	-rm -f sendreceive/$(DEPDIR)/settings.Po
+	-rm -f session/$(DEPDIR)/confirm.Po
 	-rm -f session/$(DEPDIR)/logic.Po
 	-rm -f session/$(DEPDIR)/login.Po
 	-rm -f session/$(DEPDIR)/logout.Po
@@ -5372,6 +5378,7 @@ maintainer-clean: maintainer-clean-am
 	-rm -f sendreceive/$(DEPDIR)/resources.Po
 	-rm -f sendreceive/$(DEPDIR)/sendreceive.Po
 	-rm -f sendreceive/$(DEPDIR)/settings.Po
+	-rm -f session/$(DEPDIR)/confirm.Po
 	-rm -f session/$(DEPDIR)/logic.Po
 	-rm -f session/$(DEPDIR)/login.Po
 	-rm -f session/$(DEPDIR)/logout.Po
